# rag_pipeline_data_load_retriever

./: README.md  pyproject.toml
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
src/: data_loader.py  embedding.py  main.py  search.py  vectorstore.py
