[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=1.5.2",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-text-splitters>=1.1.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.4",
    "sentence-transformers>=5.2.3",
]
